[gd_scene load_steps=71 format=3 uid="uid://ckm5ua4jm6ukm"]

[ext_resource type="Script" uid="uid://blorlg6prr01v" path="res://Objects/Player/player.gd" id="1_4ntmi"]
[ext_resource type="Texture2D" uid="uid://b2vc1s7e8nvv3" path="res://Objects/Player/Gundark.png" id="2_5xe3a"]
[ext_resource type="Texture2D" uid="uid://cjd4rru2iydw7" path="res://Objects/Player/PlayerAnims/RatClimb.png" id="2_bpp7x"]
[ext_resource type="Texture2D" uid="uid://bk5jt3udvaexd" path="res://Objects/Player/PlayerAnims/RatFall.png" id="3_jllbl"]
[ext_resource type="Texture2D" uid="uid://cgmp48ag5umax" path="res://Objects/Player/PlayerAnims/RatIdle.png" id="4_0mj7g"]
[ext_resource type="Texture2D" uid="uid://dnckgpi77t47p" path="res://Objects/Player/PlayerAnims/RatJump.png" id="5_thffa"]
[ext_resource type="Texture2D" uid="uid://2ljg2yuogltb" path="res://Objects/Player/PlayerAnims/RatHidden.png" id="5_xtia4"]
[ext_resource type="Texture2D" uid="uid://070yqgunk1fp" path="res://Objects/Player/PlayerAnims/RatRun.png" id="6_xtia4"]
[ext_resource type="Texture2D" uid="uid://c524qijpy3ewx" path="res://Objects/Player/Gun.png" id="7_bpp7x"]
[ext_resource type="AudioStream" uid="uid://baajm734qwumm" path="res://Objects/Player/shotgun.wav" id="8_jllbl"]
[ext_resource type="AudioStream" uid="uid://clymcsgo1p50j" path="res://Objects/Player/WetFootstep.wav" id="9_0mj7g"]
[ext_resource type="Texture2D" uid="uid://batmjtkub6ulv" path="res://Objects/Player/PlayerAnims/RatReload.png" id="9_kmg4v"]
[ext_resource type="AudioStream" uid="uid://kdjk0jbhdjdu" path="res://Objects/Player/MetalFootstep.wav" id="10_thffa"]
[ext_resource type="AudioStream" uid="uid://byu1xcynnj4k4" path="res://Objects/Player/The path to CHEESE(TD).mp3" id="13_8a0no"]
[ext_resource type="AudioStream" uid="uid://bdl6w2jihbrol" path="res://Objects/Player/Shotgun1.wav" id="16_ikfl2"]
[ext_resource type="AudioStream" uid="uid://crxaxuij6yqim" path="res://Objects/Player/Shotgun2.wav" id="17_iuvgb"]

[sub_resource type="SpriteFrames" id="SpriteFrames_yemeo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_5xe3a")
}],
"loop": true,
"name": &"Dark",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_bpp7x")
}],
"loop": true,
"name": &"Light",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_8a0no"]
atlas = ExtResource("2_bpp7x")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kmg4v"]
atlas = ExtResource("2_bpp7x")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nipdn"]
atlas = ExtResource("2_bpp7x")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ikfl2"]
atlas = ExtResource("2_bpp7x")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_iuvgb"]
atlas = ExtResource("2_bpp7x")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r7vp5"]
atlas = ExtResource("2_bpp7x")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_um0bh"]
atlas = ExtResource("3_jllbl")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5xe3a"]
atlas = ExtResource("5_xtia4")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8nghj"]
atlas = ExtResource("4_0mj7g")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rn8wc"]
atlas = ExtResource("5_thffa")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a0ywc"]
atlas = ExtResource("9_kmg4v")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_cfxyn"]
atlas = ExtResource("9_kmg4v")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_tqpct"]
atlas = ExtResource("9_kmg4v")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_qmkm8"]
atlas = ExtResource("9_kmg4v")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_80q5k"]
atlas = ExtResource("9_kmg4v")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1r6lx"]
atlas = ExtResource("9_kmg4v")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_b08iq"]
atlas = ExtResource("9_kmg4v")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1heew"]
atlas = ExtResource("9_kmg4v")
region = Rect2(896, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_cokyo"]
atlas = ExtResource("9_kmg4v")
region = Rect2(1024, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_r76ql"]
atlas = ExtResource("9_kmg4v")
region = Rect2(1152, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_rpb24"]
atlas = ExtResource("9_kmg4v")
region = Rect2(1280, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_t8vn7"]
atlas = ExtResource("9_kmg4v")
region = Rect2(1408, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_am4cr"]
atlas = ExtResource("9_kmg4v")
region = Rect2(1536, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_5887v"]
atlas = ExtResource("9_kmg4v")
region = Rect2(1664, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_h3kpk"]
atlas = ExtResource("9_kmg4v")
region = Rect2(1792, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8m5wj"]
atlas = ExtResource("9_kmg4v")
region = Rect2(1920, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3am5"]
atlas = ExtResource("9_kmg4v")
region = Rect2(2048, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ju3ob"]
atlas = ExtResource("9_kmg4v")
region = Rect2(2176, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_7mj41"]
atlas = ExtResource("9_kmg4v")
region = Rect2(2304, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ja56h"]
atlas = ExtResource("9_kmg4v")
region = Rect2(2432, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_vd7eq"]
atlas = ExtResource("9_kmg4v")
region = Rect2(2560, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_fgeiy"]
atlas = ExtResource("9_kmg4v")
region = Rect2(2688, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_hsh03"]
atlas = ExtResource("9_kmg4v")
region = Rect2(2816, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_gu5hg"]
atlas = ExtResource("9_kmg4v")
region = Rect2(2944, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_50ngy"]
atlas = ExtResource("9_kmg4v")
region = Rect2(3072, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ky2ya"]
atlas = ExtResource("9_kmg4v")
region = Rect2(3200, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1x3i5"]
atlas = ExtResource("9_kmg4v")
region = Rect2(3328, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_wrtbt"]
atlas = ExtResource("9_kmg4v")
region = Rect2(3456, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_sey6j"]
atlas = ExtResource("9_kmg4v")
region = Rect2(3584, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_jupkg"]
atlas = ExtResource("9_kmg4v")
region = Rect2(3712, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_qr7ku"]
atlas = ExtResource("9_kmg4v")
region = Rect2(3840, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_okio0"]
atlas = ExtResource("9_kmg4v")
region = Rect2(3968, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ukkeg"]
atlas = ExtResource("9_kmg4v")
region = Rect2(4096, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_xgj1l"]
atlas = ExtResource("6_xtia4")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wl3ml"]
atlas = ExtResource("6_xtia4")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ipsqe"]
atlas = ExtResource("6_xtia4")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2xc6l"]
atlas = ExtResource("6_xtia4")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b4ub8"]
atlas = ExtResource("6_xtia4")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tkhqc"]
atlas = ExtResource("6_xtia4")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ew0jo"]
atlas = ExtResource("6_xtia4")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0fgk3"]
atlas = ExtResource("6_xtia4")
region = Rect2(448, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_btcbx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8a0no")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kmg4v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nipdn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ikfl2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iuvgb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r7vp5")
}],
"loop": true,
"name": &"Climb",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_um0bh")
}],
"loop": true,
"name": &"Fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5xe3a")
}],
"loop": true,
"name": &"Hidden",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8nghj")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rn8wc")
}],
"loop": true,
"name": &"Jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a0ywc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cfxyn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tqpct")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qmkm8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_80q5k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1r6lx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b08iq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1heew")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cokyo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r76ql")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rpb24")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t8vn7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_am4cr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5887v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h3kpk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8m5wj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3am5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ju3ob")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7mj41")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ja56h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vd7eq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fgeiy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hsh03")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gu5hg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_50ngy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ky2ya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1x3i5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wrtbt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sey6j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jupkg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qr7ku")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_okio0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ukkeg")
}],
"loop": false,
"name": &"Reload",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xgj1l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wl3ml")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ipsqe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2xc6l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b4ub8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tkhqc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ew0jo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0fgk3")
}],
"loop": true,
"name": &"Run",
"speed": 15.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i3pqv"]
size = Vector2(18, 36)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_4ntmi")

[node name="Gun" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_yemeo")
animation = &"Light"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_btcbx")
animation = &"Reload"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -2)
shape = SubResource("RectangleShape2D_i3pqv")

[node name="ShotgunSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_jllbl")
volume_db = -5.0

[node name="Footstep" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_0mj7g")
volume_db = -15.0

[node name="LadderFootstep" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_thffa")
volume_db = -15.0

[node name="Music" type="AudioStreamPlayer" parent="." groups=["Loops"]]
stream = ExtResource("13_8a0no")
parameters/looping = true

[node name="Reload1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16_ikfl2")
volume_db = -10.0

[node name="Reload2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("17_iuvgb")
volume_db = -5.0

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_frame_changed"]
